k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ia-picture-demo
  namespace: ia-demo
  labels:
    app: ia-picture-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ia-picture-demo
  template:
    metadata:
      labels:
        app: ia-picture-demo
    spec:
      containers:
      - name: ia-picture-demo
        image: yohannumspot/ia-picture-demo:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: uploads
          mountPath: /usr/src/app/uploads
      volumes:
      - name: uploads
        emptyDir: {}
